@@ -28,6 +28,8 @@ Fixed:
   handle multilink properties. (John Rouillard)
 - issue2550583, issue2550635 Do not limit results with Xapian indexer
   (Thomas Arendsen Hein)
+- Allow using plain() on unsaved dates in HTML forms
+  (Thomas Arendsen Hein)
 
 2013-07-06: 1.5.0
 
